package io.github.vftdan.wnsirs.core;

public class Algorithm extends CompositeAlgorithmPart {
	public Algorithm() {
		defaultRole = "algorithm";
	}
}
